--- a/server/language/bg_BG.UTF-8/LC_MESSAGES/zarafa_webapp.po
+++ b/server/language/bg_BG.UTF-8/LC_MESSAGES/zarafa_webapp.po
@@ -367,7 +367,10 @@ msgstr ""
 msgid "User details"
 msgstr ""
 
-msgid "First"
+msgid "First name"
+msgstr ""
+
+msgid "Last name"
 msgstr ""
 
 msgid "Initials"
@@ -376,7 +379,7 @@ msgstr ""
 msgid "Display"
 msgstr ""
 
-msgid "Last"
+msgid "Addresses"
 msgstr ""
 
 msgid "Address"
@@ -392,6 +395,9 @@ msgid "Zip Code"
 msgstr ""
 
 msgid "Country"
+msgstr ""
+
+msgid "Professional"
 msgstr ""
 
 msgid "Title"
@@ -3349,9 +3355,6 @@ msgstr ""
 msgid "Photo"
 msgstr ""
 
-msgid "Addresses"
-msgstr ""
-
 msgid "Additional information"
 msgstr ""
 
@@ -3376,7 +3379,13 @@ msgstr ""
 msgid "Check full name"
 msgstr ""
 
+msgid "First"
+msgstr ""
+
 msgid "Middle"
+msgstr ""
+
+msgid "Last"
 msgstr ""
 
 msgid "Show this again when name is incomplete or unclear."
