--- a/server/language/ar.UTF-8/LC_MESSAGES/zarafa_webapp.po
+++ b/server/language/ar.UTF-8/LC_MESSAGES/zarafa_webapp.po
@@ -404,7 +404,10 @@ msgstr ""
 msgid "User details"
 msgstr ""
 
-msgid "First"
+msgid "First name"
+msgstr ""
+
+msgid "Last name"
 msgstr ""
 
 msgid "Initials"
@@ -413,7 +416,7 @@ msgstr ""
 msgid "Display"
 msgstr ""
 
-msgid "Last"
+msgid "Addresses"
 msgstr ""
 
 msgid "Address"
@@ -429,6 +432,9 @@ msgid "Zip Code"
 msgstr ""
 
 msgid "Country"
+msgstr ""
+
+msgid "Professional"
 msgstr ""
 
 msgid "Title"
@@ -3426,9 +3432,6 @@ msgstr ""
 msgid "Photo"
 msgstr ""
 
-msgid "Addresses"
-msgstr ""
-
 msgid "Additional information"
 msgstr ""
 
@@ -3453,7 +3456,13 @@ msgstr ""
 msgid "Check full name"
 msgstr ""
 
+msgid "First"
+msgstr ""
+
 msgid "Middle"
+msgstr ""
+
+msgid "Last"
 msgstr ""
 
 msgid "Show this again when name is incomplete or unclear."
