--- a/server/language/ar_QA.UTF-8/LC_MESSAGES/zarafa_webapp.po
+++ b/server/language/ar_QA.UTF-8/LC_MESSAGES/zarafa_webapp.po
@@ -368,7 +368,10 @@ msgstr ""
 msgid "User details"
 msgstr ""
 
-msgid "First"
+msgid "First name"
+msgstr ""
+
+msgid "Last name"
 msgstr ""
 
 msgid "Initials"
@@ -377,7 +380,7 @@ msgstr ""
 msgid "Display"
 msgstr ""
 
-msgid "Last"
+msgid "Addresses"
 msgstr ""
 
 msgid "Address"
@@ -393,6 +396,9 @@ msgid "Zip Code"
 msgstr ""
 
 msgid "Country"
+msgstr ""
+
+msgid "Professional"
 msgstr ""
 
 msgid "Title"
@@ -3370,9 +3376,6 @@ msgstr ""
 msgid "Photo"
 msgstr ""
 
-msgid "Addresses"
-msgstr ""
-
 msgid "Additional information"
 msgstr ""
 
@@ -3397,7 +3400,13 @@ msgstr ""
 msgid "Check full name"
 msgstr ""
 
+msgid "First"
+msgstr ""
+
 msgid "Middle"
+msgstr ""
+
+msgid "Last"
 msgstr ""
 
 msgid "Show this again when name is incomplete or unclear."
