--- a/server/language/ga_GA.UTF-8/LC_MESSAGES/zarafa_webapp.po
+++ b/server/language/ga_GA.UTF-8/LC_MESSAGES/zarafa_webapp.po
@@ -394,7 +394,10 @@ msgstr ""
 msgid "User details"
 msgstr ""
 
-msgid "First"
+msgid "First name"
+msgstr ""
+
+msgid "Last name"
 msgstr ""
 
 msgid "Initials"
@@ -403,7 +406,7 @@ msgstr ""
 msgid "Display"
 msgstr ""
 
-msgid "Last"
+msgid "Addresses"
 msgstr ""
 
 msgid "Address"
@@ -419,6 +422,9 @@ msgid "Zip Code"
 msgstr ""
 
 msgid "Country"
+msgstr ""
+
+msgid "Professional"
 msgstr ""
 
 msgid "Title"
@@ -3406,9 +3412,6 @@ msgstr ""
 msgid "Photo"
 msgstr ""
 
-msgid "Addresses"
-msgstr ""
-
 msgid "Additional information"
 msgstr ""
 
@@ -3433,7 +3436,13 @@ msgstr ""
 msgid "Check full name"
 msgstr ""
 
+msgid "First"
+msgstr ""
+
 msgid "Middle"
+msgstr ""
+
+msgid "Last"
 msgstr ""
 
 msgid "Show this again when name is incomplete or unclear."
