--- a/server/language/zh_CN.UTF-8/LC_MESSAGES/zarafa_webapp.po
+++ b/server/language/zh_CN.UTF-8/LC_MESSAGES/zarafa_webapp.po
@@ -359,8 +359,11 @@ msgstr "通讯录"
 msgid "User details"
 msgstr "用户详细信息"
 
-msgid "First"
-msgstr "第一个"
+msgid "First name"
+msgstr ""
+
+msgid "Last name"
+msgstr ""
 
 msgid "Initials"
 msgstr ""
@@ -368,9 +371,8 @@ msgstr ""
 msgid "Display"
 msgstr "显示"
 
-# 75%
-msgid "Last"
-msgstr "最后一个"
+msgid "Addresses"
+msgstr "地址"
 
 msgid "Address"
 msgstr "地址"
@@ -386,6 +388,9 @@ msgstr "邮编"
 
 msgid "Country"
 msgstr "国家"
+
+msgid "Professional"
+msgstr ""
 
 msgid "Title"
 msgstr "职称"
@@ -3409,9 +3414,6 @@ msgstr "周年"
 msgid "Photo"
 msgstr "照片"
 
-msgid "Addresses"
-msgstr "地址"
-
 msgid "Additional information"
 msgstr "其它信息"
 
@@ -3437,8 +3439,15 @@ msgstr "TTY/TDD"
 msgid "Check full name"
 msgstr "检查全名"
 
+msgid "First"
+msgstr "第一个"
+
 msgid "Middle"
 msgstr "中间名"
+
+# 75%
+msgid "Last"
+msgstr "最后一个"
 
 msgid "Show this again when name is incomplete or unclear."
 msgstr "姓名不完整或不清楚时，再次显示此项。"
